--- a/index.html
+++ b/index.html
@@ -100,55 +100,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <div class="slideshow-container">
         <div class="slide active">
-            <img src="DSC05188.jpg" alt="Slide 1">
+            <img src="DSC05188.webp" alt="Slide 1">
             <div class="caption">"Every day with you is a gift." 🎁💞</div>
         </div>
         <div class="slide">
-            <img src="DSC05462.jpg" alt="Slide 2">
+            <img src="DSC05462.webp" alt="Slide 2">
             <div class="caption">"Your love is my happiest melody." 🎶💕</div>
         </div>
         <div class="slide">
-            <img src="DSC05221.jpg" alt="Slide 3">
+            <img src="DSC05221.webp" alt="Slide 3">
             <div class="caption">"Forever isn't long enough with you."⏳❤️</div>
         </div>
         <div class="slide">
-            <img src="DSC05380.jpg" alt="Slide 4">
+            <img src="DSC05380.webp" alt="Slide 4">
             <div class="caption">💖💖💖💖💖</div>
         </div>
         <div class="slide active">
-            <img src="DSC05458.jpg" alt="Slide 5">
+            <img src="DSC05458.webp" alt="Slide 5">
             <div class="caption">"Holding you feels like home." 🏡💖 </div>
         </div>
         <div class="slide">
-            <img src="DSC05448.jpg" alt="Slide 6">
+            <img src="DSC05448.webp" alt="Slide 6">
             <div class="caption">"You're my sweetest dream come true." 🌙💕</div>
         </div>
         <div class="slide">
-            <img src="DSC05238.jpg" alt="Slide 7">
+            <img src="DSC05238.webp" alt="Slide 7">
             <div class="caption">"You make my heart dance." 💃💖</div>
         </div>
         <div class="slide">
-            <img src="DSC05288.jpg" alt="Slide 8">
+            <img src="DSC05288.webp" alt="Slide 8">
             <div class="caption">"With you, every moment is magical." ✨❤️</div>
         </div>
         <div class="slide active">
-            <img src="DSC05392.jpg" alt="Slide 9">
+            <img src="DSC05392.webp" alt="Slide 9">
             <div class="caption">"You're my heart's favorite song." 🎵❤️</div>
         </div>
         <div class="slide">
-            <img src="DSC05262.jpg" alt="Slide 10">
+            <img src="DSC05262.webp" alt="Slide 10">
             <div class="caption">"You light up my world." 💡💕</div>
         </div>
         <div class="slide">
-            <img src="DSC05270.jpg" alt="Slide 11">
+            <img src="DSC05270.webp" alt="Slide 11">
             <div class="caption">"Love shines brightest with you." ✨💖</div>
         </div>
         <div class="slide">
-            <img src="DSC05303.jpg" alt="Slide 12">
+            <img src="DSC05303.webp" alt="Slide 12">
             <div class="caption">"You are my favorite place to be." 🏠💞</div>
         </div>
         <div class="slide">
-            <img src="DSC05358.jpg" alt="Slide 12">
+            <img src="DSC05358.webp" alt="Slide 12">
             <div class="caption">"Your smile is my sunshine." ☀️💞</div>
         </div>
     </div>
