--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
     </div>
     <audio id="background-music" loop autoplay muted>
-        <source src="background-music.mp3" type="audio/mpeg">
+        <source src="background-music.ogg" type="audio/mpeg">
     </audio>
     <script>
         let index = 0;
