--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 0;
-            background: linear-gradient(135deg, #ffffff, #fceef3);
+            background: linear-gradient(135deg, #1a1a1a, #070707);
             font-family: 'Poppins', sans-serif;
             overflow: hidden;
             text-align: center;
@@ -84,7 +84,7 @@
             font-family: 'Sacramento', cursive;
             font-size: 26px;
             /* font-weight: bold; */
-            color: #060606;
+            color: #faf6f6;
             /* Soft romantic pink */
             text-align: center;
             /* text-shadow: 2px 2px 6px rgba(255, 105, 180, 0.5); */
